[package]
name = "envtime"
version = "0.0.1"
authors = ["Async <asyncvoid@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2.0.18"

