[package]
name = "envtime"
version = "0.0.1"
edition = "2021"
description = "Runtime and compile-time environment resolution for Rust"
authors = ["Async <asyncvoid@users.noreply.github.com>"]
repository = "https://github.com/AsyncVoid/envtime"
keywords = ["env", "environment", "build", "settings"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2.0.18"

